# raytracing-engine

./: .gitignore  Cargo.toml  build_for_renderdoc.bat  compile_shaders.bat
res/shaders/src/: draw_to_screen.frag  draw_to_screen.vert  frag.frag  map.comp  map.frag  map2.frag  mesh.frag  mesh.vert  raytracer.comp  test.comp
src/: frametime.rs  game.rs  game_old.rs  graph.rs  lib.rs  main.rs  renderer.rs  util.rs  window.rs
src/game/: space_mesh.rs  wireframe_mesh.rs
src/math/: mat.rs  vec.rs
src/renderer/: buffer.rs  commands.rs  compute_layer.rs  compute_pass.rs  compute_pipeline.rs  core.rs  descriptors.rs  device.rs  fence.rs  frame.rs  framebuffer.rs  graphics_layer.rs  graphics_pass.rs  graphics_pipeline.rs  image.rs  layer.rs  mesh.rs  push_constant.rs  renderer_data.rs  sampler.rs  semaphore.rs  shader.rs  swapchain.rs  vertex_buffer.rs
src/renderer/descriptors/: image_descriptor.rs  sampler_descriptor.rs  storage_descriptor.rs  uniform_descriptor.rs
src/space/: meshes.rs
src/util/: frametime.rs  graph.rs
