[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
raw-window-handle = "0.5"
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"] }
ash-window = { version = "0.12.0" }
